BG in menu changed

--- a/card.html
+++ b/card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>restorant alle me</title>
 </head>
+
 <body>
 
   <div class="container-fluid">
@@ -18,165 +20,104 @@
     <header>
 
       <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <img src="img/logo.png" height="70px" alt="">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <img src="img/logo.png" height="70px" alt="">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
 
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="card.html">Menu</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="card.html">Menu</a>
+            </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="adres.html">Adres</a>
-          </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="adres.html">Adres</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="foto's.html">Foto's</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="foto's.html">Foto's</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact us</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact us</a>
+            </li>
 
-        </ul>
-      </div>
-    </nav>
+          </ul>
+        </div>
+      </nav>
 
     </header>
 
     <main>
 
-      <div class="blug-BG">
+      <div class="blur-BG"></div>
 
-        <div class="center-card">
+      <div class="center-card">
 
-          <div class="card col-md-10" style="width: 18rem;">
-            <div class="card-body">
-              <h3 class="card-title">MENU</h3>
+        <div class="card col-md-10" style="width: 18rem;">
+          <div class="card-body">
+            <h3 class="card-title">MENU</h3>
 
-              <div class="row">
+            <div class="row">
 
-                <div class="menuL col-md-6">
+              <div class="menuL col-md-6">
 
-                  <div class="card">
+                <div class="card">
 
-                    <h4 class="pt-4">Drinks</h4>
+                  <h4 class="pt-4">Drinks</h4>
 
-                    <hr>
+                  <hr>
 
-                    <div class="option">
+                  <div class="option">
 
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
 
                   </div>
 
+                  <hr>
 
+                  <div class="option">
 
-
-
-                  <!-- BOTTOM OF LEFT SIDE -->
-
-                  <div class="card mt-3">
-
-                    <h4 class="pt-4">Deserts</h4>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
 
                   </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
 
                 </div>
 
@@ -184,138 +125,197 @@
 
 
 
+                <!-- BOTTOM OF LEFT SIDE -->
 
+                <div class="card mt-3">
 
+                  <h4 class="pt-4">Deserts</h4>
 
+                  <hr>
 
+                  <div class="option">
 
-                <!-- RIGHT SIDE -->
-
-                <div class="menuR col-md-6">
-
-                  <div class="card">
-
-                    <h4 class="pt-4">FOOOD</h4>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
-
-                    <div class="option">
-
-                      <b>BUY THIS</b>
-                      <span class="badge">€9.99</span>
-
-                    </div>
-
-                    <hr>
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
 
                   </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                </div>
+
+              </div>
+
+
+
+
+
+
+
+
+
+
+              <!-- RIGHT SIDE -->
+
+              <div class="menuR col-md-6">
+
+                <div class="card">
+
+                  <h4 class="pt-4">FOOOD</h4>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
+
+                  <div class="option">
+
+                    <b>BUY THIS</b>
+                    <span class="badge">€9.99</span>
+
+                  </div>
+
+                  <hr>
 
                 </div>
 
               </div>
 
             </div>
-          </div>
 
+          </div>
         </div>
 
       </div>
@@ -331,4 +331,5 @@
   </div>
 
 </body>
+
 </html>
