food pic change ad 1st news

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row cards">
 
         <div class="card col-md-3 col-sm-10 mb-4" style="width: 18rem;">
-          <img class="card-img-top" src="img/food10.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="img/food1.jpg" alt="Card image cap">
           <div class="card-body">
             <h3 class="card-title">New menu item</h3>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, quis!</p>
