jumbotron bg-image added

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
     <main>
 
       <div class="jumbotron">
-        <h1 class="display-4">Website Of Restorant</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, recusandae!</p>
+        <div class="text-jumbo">
+          <h1 class="display-4">Website Of Restorant</h1>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, recusandae!</p>
+        </div>
       </div>
 
       <div class="row cards">
