--- a/foto's.html
+++ b/foto's.html
@@ -59,19 +59,19 @@
 
       <div class="row">
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food1.jpg" alt="video" data-toggle="modal" data-target="#modal1">
 
         </div>
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food2.jpg" alt="video" data-toggle="modal" data-target="#modal6">
 
         </div>
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food3.jpg" alt="video" data-toggle="modal" data-target="#modal4">
 
@@ -81,19 +81,19 @@
 
       <div class="row">
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food4.jpg" alt="video" data-toggle="modal" data-target="#modal2">
 
         </div>
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food5.jpg" alt="video" data-toggle="modal" data-target="#modal5">
 
         </div>
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food6.jpg" alt="video" data-toggle="modal" data-target="#modal3">
 
@@ -103,19 +103,19 @@
 
       <div class="row">
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food8.jpeg" alt="video" data-toggle="modal" data-target="#modal2">
 
         </div>
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/drink.jpg" alt="video" data-toggle="modal" data-target="#modal5">
 
         </div>
 
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 col-sm-12 mb-4">
 
           <img class="img-fluid" src="img/food7.jpg" alt="video" data-toggle="modal" data-target="#modal3">
 
