--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
 
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
 
@@ -37,7 +37,7 @@
               <a class="nav-link" href="card.html">Menu</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item active">
               <a class="nav-link" href="adres.html">Adres</a>
             </li>
 
