--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="card.html">Menu</a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item">
               <a class="nav-link" href="adres.html">Adres</a>
             </li>
 
