adres-con added

--- a/adres.html
+++ b/adres.html
@@ -54,61 +54,65 @@
 
     <main>
 
-      <div class="center-card">
+      <div id="adres-con">
 
-        <div class="card col-md-6">
+        <div class="center-card">
 
-          <h3 class="pt-4">openings uren</h3>
+          <div class="card col-md-6">
 
-          <hr>
+            <h3 class="pt-4">openings uren</h3>
 
-          <div class="option">
+            <hr>
 
-            <b>
-              ma-vr
-            </b>
+            <div class="option">
 
-            <span>
-              12:00 - 22:00
-            </span>
+              <b>
+                ma-vr
+              </b>
 
-          </div>
-
-          <hr>
-
-          <div class="option">
-
-            <b>
-              za
-            </b>
-
-            <span>
-              12:00 - 20:00
-            </span>
+              <span>
+                12:00 - 22:00
+              </span>
 
             </div>
 
-          <hr>
+            <hr>
 
-          <div class="option">
+            <div class="option">
 
-            <b>
-              zo
-            </b>
+              <b>
+                za
+              </b>
 
-            <span>
-              gesloten
-            </span>
+              <span>
+                12:00 - 20:00
+              </span>
+
+              </div>
+
+            <hr>
+
+            <div class="option">
+
+              <b>
+                zo
+              </b>
+
+              <span>
+                gesloten
+              </span>
+
+            </div>
+
+            <hr>
 
           </div>
 
-          <hr>
-
         </div>
 
-      </div>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1IPoMaKupADj7IdbZzayWplv7M2s6xVsu" width="100%" class="mt-4" height="350"></iframe>
 
-      <iframe src="https://www.google.com/maps/d/embed?mid=1IPoMaKupADj7IdbZzayWplv7M2s6xVsu" width="100%" class="mt-4" height="350"></iframe>
+      </div>
 
     </main>
 
