--- a/foto's.html
+++ b/foto's.html
@@ -61,41 +61,19 @@
 
         <div class="col-md-4 col-sm-12 mb-4">
 
-          <img class="img-fluid" src="img/food1.jpg" alt="video" data-toggle="modal" data-target="#modal1">
+          <img class="img-fluid" src="img/food1.jpg" data-toggle="modal" data-target="#modal1">
 
         </div>
 
         <div class="col-md-4 col-sm-12 mb-4">
 
-          <img class="img-fluid" src="img/food2.jpg" alt="video" data-toggle="modal" data-target="#modal6">
+          <img class="img-fluid" src="img/food2.jpg" data-toggle="modal" data-target="#modal6">
 
         </div>
 
         <div class="col-md-4 col-sm-12 mb-4">
 
-          <img class="img-fluid" src="img/food3.jpg" alt="video" data-toggle="modal" data-target="#modal4">
-
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-4 col-sm-12 mb-4">
-
-          <img class="img-fluid" src="img/food4.jpg" alt="video" data-toggle="modal" data-target="#modal2">
-
-        </div>
-
-        <div class="col-md-4 col-sm-12 mb-4">
-
-          <img class="img-fluid" src="img/food5.jpg" alt="video" data-toggle="modal" data-target="#modal5">
-
-        </div>
-
-        <div class="col-md-4 col-sm-12 mb-4">
-
-          <img class="img-fluid" src="img/food6.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+          <img class="img-fluid" src="img/food3.jpg" data-toggle="modal" data-target="#modal4">
 
         </div>
 
@@ -105,19 +83,41 @@
 
         <div class="col-md-4 col-sm-12 mb-4">
 
-          <img class="img-fluid" src="img/food8.jpeg" alt="video" data-toggle="modal" data-target="#modal2">
+          <img class="img-fluid" src="img/food4.jpg" data-toggle="modal" data-target="#modal2">
 
         </div>
 
         <div class="col-md-4 col-sm-12 mb-4">
 
-          <img class="img-fluid" src="img/drink.jpg" alt="video" data-toggle="modal" data-target="#modal5">
+          <img class="img-fluid" src="img/food5.jpg" data-toggle="modal" data-target="#modal5">
 
         </div>
 
         <div class="col-md-4 col-sm-12 mb-4">
 
-          <img class="img-fluid" src="img/food7.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+          <img class="img-fluid" src="img/food6.jpg" data-toggle="modal" data-target="#modal3">
+
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-md-4 col-sm-12 mb-4">
+
+          <img class="img-fluid" src="img/food8.jpeg" data-toggle="modal" data-target="#modal2">
+
+        </div>
+
+        <div class="col-md-4 col-sm-12 mb-4">
+
+          <img class="img-fluid" src="img/drink.jpg" data-toggle="modal" data-target="#modal5">
+
+        </div>
+
+        <div class="col-md-4 col-sm-12 mb-4">
+
+          <img class="img-fluid" src="img/food7.jpg" data-toggle="modal" data-target="#modal3">
 
         </div>
 
@@ -127,7 +127,7 @@
 
         <div class="col-md-12 mb-4">
 
-          <img class="img-fluid" src="img/intirior.jpg" alt="video" data-toggle="modal" data-target="#modal3">
+          <img class="img-fluid" src="img/intirior.jpg" data-toggle="modal" data-target="#modal3">
 
         </div>
 
