--- a/card.html
+++ b/card.html
@@ -62,6 +62,10 @@
 
         <div class="card col-md-10" style="width: 18rem;">
           <div class="card-body">
+
+            <img src="img/top-card.png" alt="">
+
+
             <h3 class="card-title">MENU</h3>
 
             <div class="row">
@@ -314,6 +318,8 @@
               </div>
 
             </div>
+
+            <img src="img/bottom-card.png" alt="">
 
           </div>
         </div>
