card top and bot img to 100% whith

--- a/card.html
+++ b/card.html
@@ -63,7 +63,7 @@
         <div class="card col-md-10" style="width: 18rem;">
           <div class="card-body">
 
-            <img src="img/top-card.png" alt="">
+            <img src="img/top-card.png" alt="" width="100%">
 
 
             <h3 class="card-title">MENU</h3>
@@ -319,7 +319,7 @@
 
             </div>
 
-            <img src="img/bottom-card.png" alt="">
+            <img src="img/bottom-card.png" width="100%" alt="">
 
           </div>
         </div>
