--- a/card.html
+++ b/card.html
@@ -80,8 +80,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>nectar</b>
+                    <span class="badge">€5.00</span>
 
                   </div>
 
@@ -89,8 +89,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>cola</b>
+                    <span class="badge">€5.00</span>
 
                   </div>
 
@@ -98,8 +98,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>suprise tea</b>
+                    <span class="badge">€5.00</span>
 
                   </div>
 
@@ -107,8 +107,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>me tea</b>
+                    <span class="badge">€5.00</span>
 
                   </div>
 
@@ -116,8 +116,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>water</b>
+                    <span class="badge">€20.00</span>
 
                   </div>
 
@@ -139,8 +139,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>waffel</b>
+                    <span class="badge">€5.00</span>
 
                   </div>
 
@@ -148,8 +148,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>cake</b>
+                    <span class="badge">€4.00</span>
 
                   </div>
 
@@ -157,8 +157,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>tiramisu</b>
+                    <span class="badge">€7.00</span>
 
                   </div>
 
@@ -166,8 +166,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>rijst pap</b>
+                    <span class="badge">€3.00</span>
 
                   </div>
 
@@ -175,8 +175,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>toost</b>
+                    <span class="badge">€4.00</span>
 
                   </div>
 
@@ -201,14 +201,14 @@
 
                 <div class="card">
 
-                  <h4 class="pt-4">FOOOD</h4>
+                  <h4 class="pt-4">FOOOOSD</h4>
 
                   <hr>
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>chrok mesjeu</b>
+                    <span class="badge">€8.00</span>
 
                   </div>
 
@@ -216,8 +216,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>spaget</b>
+                    <span class="badge">€12.00</span>
 
                   </div>
 
@@ -225,8 +225,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>boere worst</b>
+                    <span class="badge">ƒ13.00</span>
 
                   </div>
 
@@ -234,8 +234,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>zifkaf</b>
+                    <span class="badge">€10.00</span>
 
                   </div>
 
@@ -243,8 +243,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>cat</b>
+                    <span class="badge">¥1500</span>
 
                   </div>
 
@@ -252,8 +252,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>ramen noodels</b>
+                    <span class="badge">€20.00</span>
 
                   </div>
 
@@ -261,8 +261,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>toost</b>
+                    <span class="badge">€50.00</span>
 
                   </div>
 
@@ -270,8 +270,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>natte pap</b>
+                    <span class="badge">€9.00</span>
 
                   </div>
 
@@ -279,8 +279,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>iet italjaans</b>
+                    <span class="badge">€11.00</span>
 
                   </div>
 
@@ -288,8 +288,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>penne</b>
+                    <span class="badge">€9.00</span>
 
                   </div>
 
@@ -297,8 +297,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>oyako</b>
+                    <span class="badge">€12.00</span>
 
                   </div>
 
@@ -306,8 +306,8 @@
 
                   <div class="option">
 
-                    <b>BUY THIS</b>
-                    <span class="badge">€9.99</span>
+                    <b>stof</b>
+                    <span class="badge">€1.00</span>
 
                   </div>
 
