--- a/card.html
+++ b/card.html
@@ -201,7 +201,7 @@
 
                 <div class="card">
 
-                  <h4 class="pt-4">FOOOOSD</h4>
+                  <h4 class="pt-4">FOOOOD</h4>
 
                   <hr>
 
