--- a/card.html
+++ b/card.html
@@ -98,7 +98,7 @@
 
                   <div class="option">
 
-                    <b>suprise tea</b>
+                    <b>surprise tea</b>
                     <span class="badge">€5.00</span>
 
                   </div>
@@ -139,7 +139,7 @@
 
                   <div class="option">
 
-                    <b>waffel</b>
+                    <b>wafel</b>
                     <span class="badge">€5.00</span>
 
                   </div>
@@ -207,7 +207,7 @@
 
                   <div class="option">
 
-                    <b>chrok mesjeu</b>
+                    <b>crock monsieur</b>
                     <span class="badge">€8.00</span>
 
                   </div>
@@ -225,7 +225,7 @@
 
                   <div class="option">
 
-                    <b>boere worst</b>
+                    <b>boerenworst</b>
                     <span class="badge">ƒ13.00</span>
 
                   </div>
@@ -252,7 +252,7 @@
 
                   <div class="option">
 
-                    <b>ramen noodels</b>
+                    <b>ramen noodles</b>
                     <span class="badge">€20.00</span>
 
                   </div>
@@ -279,7 +279,7 @@
 
                   <div class="option">
 
-                    <b>iet italjaans</b>
+                    <b>iets italiaans</b>
                     <span class="badge">€11.00</span>
 
                   </div>
